# django_second

sproba_6/: pyproject.toml
sproba_6/hm_project/: db.sqlite3
sproba_6/hm_project/hm_project/: asgi.py  settings.py  wsgi.py
sproba_6/hm_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
sproba_6/hm_project/quotes/migrations/: 0001_initial.py
sproba_6/hm_project/quotes/static/quotes/: style.css
sproba_6/hm_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tags.html  top_tags.html
sproba_6/hm_project/quotes/templatetags/: extract.py
sproba_6/hm_project/users/: forms.py  urls.py  views.py
sproba_6/hm_project/users/templates/users/: login.html  signup.html
sproba_6/hm_project/utils/: add_quotes_to_mongo.py  migration.py
